fix: Not showing all of the content in the width

--- a/src/frontend/styles/components/flow.styl
+++ b/src/frontend/styles/components/flow.styl
@@ -80,7 +80,7 @@
   color: FLOW_PARALLEL_AFTER_VALUE_COLOR
 
 .flow-parallel-value-box
-  width: 100%
+  width: fit-content
   display: inline-block
   padding-left: 5px
   padding-right: 5px
